--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:label="@string/title_activity_activity_map"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Edit_Item_Activity"></activity>
+        <activity android:name=".View_Item_Activity"></activity>
     </application>
 
 </manifest>
